--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  datepicker_dropdown: ^0.0.7+5
   intl: ^0.18.1
   file_picker: ^5.3.2
   animated_splash_screen: ^1.3.0
+  google_nav_bar: ^5.0.6
+  flutter_local_notifications: ^15.1.0+1
+  provider: ^6.0.5
+  http: ^1.1.0
+  network_info_plus: ^4.0.1
+  device_info_plus: ^9.0.2
+  flutter_cache_manager: ^3.3.1
+  jwt_decode: ^0.3.1
 
 dev_dependencies:
   flutter_test:
@@ -63,6 +70,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/Logo3.png
+
     # - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -76,12 +84,14 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: Poppins
+      fonts:
+        - asset: assets/fonts/Poppins/Poppins-Regular.ttf
+        - asset: assets/fonts/Poppins/Poppins-Bold.ttf
+        - asset: assets/fonts/Poppins/Poppins-Medium.ttf
+        - asset: assets/fonts/Poppins/Poppins-Thin.ttf
+
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
