modified:   android/app/src/main/AndroidManifest.xml 	modified:   lib/Pages/Calendrier.dart 	modified:   lib/Pages/LeaveDetailsPage.dart 	modified:   lib/Pages/ProfilePage.dart 	modified:   lib/Pages/SwitchPages.dart 	modified:   lib/components/button.dart 	modified:   lib/models/DemandeCard.dart 	modified:   lib/models/Personnel.dart 	modified:   lib/services/service.dart 	modified:   lib/test.dart 	modified:   macos/Flutter/GeneratedPluginRegistrant.swift 	modified:   pubspec.lock 	modified:   pubspec.yaml

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     
 
     <application
-        android:label="E-cemos"
+        android:label="Libre RH"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
