modified:   lib/Pages/Calendrier.dart 	modified:   lib/Pages/Demande.dart 	modified:   lib/Pages/HomePage.dart 	modified:   lib/Pages/LeaveDetailsPage.dart 	modified:   lib/Pages/NotifsPage.dart 	new file:   lib/components/BoxDetails.dart 	modified:   lib/components/DropDown.dart 	modified:   pubspec.lock 	modified:   pubspec.yaml

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   jwt_decode: ^0.3.1
   shared_preferences: ^2.2.0
   open_file: ^3.3.2
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
