--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   shared_preferences: ^2.2.0
   open_file: ^3.3.2
   shimmer: ^3.0.0
+  supabase_flutter: ^2.3.3
 
 dev_dependencies:
   flutter_test:
